--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <div class="container">
         <h1>Hello, World!</h1>
-        <p>Welcome to your first web paged.</p>
+        <p>Welcome to your first web paged 2.</p>
         <button id="greetButton">Click Me</button>
     </div>
 
